--- a/contact-form.html
+++ b/contact-form.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <style>
         body{
             background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
+            font-family: sans-serif;
         }
         .contact-form{
             background: #fff;
             margin-top: 10%;
             margin-bottom: 5%;
             width: 70%;
+            border-radius:1rem;
         }
         .contact-form .form-control{
-            border-radius:1rem;
+            border-radius: 1rem;
         }
         .contact-image{
             text-align: center;
@@ -34,7 +36,7 @@
             padding: 14%;
         }
         .contact-form form .row{
-            margin-bottom: -7%;
+            margin-bottom: 1%;
         }
         .contact-form h3{
             margin-bottom: 8%;
@@ -47,7 +49,7 @@
             border: none;
             border-radius: 1rem;
             padding: 1.5%;
-            background: #dc3545;
+            background: #0062cc;
             font-weight: 600;
             color: #fff;
             cursor: pointer;
@@ -71,7 +73,7 @@
         </div>
         <form method="post">
             <h3>Drop Us a Message</h3>
-           <div class="row">
+            <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
                         <input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
@@ -82,14 +84,16 @@
                     <div class="form-group">
                         <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" />
                     </div>
-                    <div class="form-group">
-                        <input type="submit" name="btnSubmit" class="btnContact" value="Send Message" />
-                    </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
+                        <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 145px;"></textarea>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <input type="submit" name="btnSubmit" class="btnContact" value="Send Message" />
                 </div>
             </div>
         </form>
