--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -12,47 +12,59 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: #17a2b8;
-            height: 100vh;
+            background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
+            font-family: sans-serif;
         }
         #login .container #login-row #login-column #login-box {
             margin-top: 120px;
             max-width: 600px;
-            height: 320px;
-            border: 1px solid #9C9C9C;
-            background-color: #EAEAEA;
+            border-radius: 1rem;
+            background-color: white;
         }
         #login .container #login-row #login-column #login-box #login-form {
             padding: 20px;
         }
-        #login .container #login-row #login-column #login-box #login-form #register-link {
-            margin-top: -85px;
+        .text {
+            color: #0062cc;
+        }
+        .btn-submit {
+            border-radius: 1rem;
+            background-color: #0062cc;
+            color: white;
+        }
+        .form-control {
+            border-radius: 1rem;
         }
     </style>
 </head>
 <body>
     <div id="login">
-        <h3 class="text-center text-white pt-5">Login form</h3>
+        <h3 class="text-center text-white pt-5">Login Form</h3>
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
                         <form id="login-form" class="form" action="" method="post">
-                            <h3 class="text-center text-info">Login</h3>
+                            <h3 class="text-center text">Login</h3>
                             <div class="form-group">
-                                <label for="username" class="text-info">Username:</label><br>
+                                <label for="username" class="text">Username:</label><br>
                                 <input type="text" name="username" id="username" class="form-control">
                             </div>
                             <div class="form-group">
-                                <label for="password" class="text-info">Password:</label><br>
-                                <input type="text" name="password" id="password" class="form-control">
+                                <label for="password" class="text">Password:</label><br>
+                                <input type="password" name="password" id="password" class="form-control">
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-6">
+                                    <a href=""><label for="remember-me" class="text">Remember me</label></a>
+                                    <input id="remember-me" name="remember-me" type="checkbox">
+                                </div>
+                                <div class="text-right col-md-6">
+                                    <a href="#" class="text">Register here</a>
+                                </div>
                             </div>
                             <div class="form-group">
-                                <label for="remember-me" class="text-info"><span>Remember me</span> <span><input id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                                <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
-                            </div>
-                            <div id="register-link" class="text-right">
-                                <a href="#" class="text-info">Register here</a>
+                                <input type="submit" name="submit" class="btn btn-submit btn-md col-md-4" value="Log in">
                             </div>
                         </form>
                     </div>
