--- a/contact-form.html
+++ b/contact-form.html
@@ -5,20 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
         body{
             background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
             font-family: sans-serif;
         }
+        body:after {
+            content:'';
+            background: url('./bg-2.jpg') no-repeat center center;
+            background-size: cover;
+            position: absolute;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+            z-index:-1;
+            opacity: 1;
+        }
         .contact-form{
-            background: #fff;
             margin-top: 10%;
-            margin-bottom: 5%;
-            width: 70%;
-            border-radius:1rem;
+            border-radius: 6rem;
+            position: relative;
+            z-index: 1;
+            box-shadow: 0 0 24px 8px #47066e;
+        }
+        .contact-form::before {
+            content: "";
+            position: absolute;
+            top: 0; 
+            left: 0;
+            width: 100%; 
+            height: 100%;  
+            opacity: .65; 
+            z-index: -1;
+            border-radius: 6rem;
+            background: -webkit-linear-gradient(-45deg, #6BFFDF, #FD6976);
         }
         .contact-form .form-control{
             border-radius: 1rem;
@@ -28,40 +51,28 @@
         }
         .contact-image img{
             border-radius: 6rem;
-            width: 11%;
-            margin-top: -3%;
-            transform: rotate(29deg);
+            width: 10%;
+            margin-top: -4%;
+            border: 4px solid #47066e;
+            transform: rotate(45deg);
         }
         .contact-form form{
-            padding: 14%;
-        }
-        .contact-form form .row{
-            margin-bottom: 1%;
+            padding: 10%;
         }
         .contact-form h3{
-            margin-bottom: 8%;
-            margin-top: -10%;
+            margin-bottom: 5%;
+            margin-top: -5%;
             text-align: center;
-            color: #0062cc;
+            color: #47066e;
         }
         .contact-form .btnContact {
             width: 50%;
             border: none;
             border-radius: 1rem;
             padding: 1.5%;
-            background: #0062cc;
+            background: #47066e;
             font-weight: 600;
             color: #fff;
-            cursor: pointer;
-        }
-        .btnContactSubmit
-        {
-            width: 50%;
-            border-radius: 1rem;
-            padding: 1.5%;
-            color: #fff;
-            background-color: #0062cc;
-            border: none;
             cursor: pointer;
         }
     </style>
@@ -69,7 +80,9 @@
 <body>
     <div class="container contact-form">
         <div class="contact-image">
-            <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
+            <a href="./index.html" data-toggle="popover" data-trigger="hover" data-content="Ke Halaman Login" data-placement="bottom">
+                <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
+            </a>
         </div>
         <form method="post">
             <h3>Drop Us a Message</h3>
@@ -98,5 +111,10 @@
             </div>
         </form>
     </div>
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="popover"]').popover();   
+        });
+    </script>
 </body>
 </html>
